--- a/media-queries.css
+++ b/media-queries.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: .5em;
     display: flex;
     flex-direction: column;
 }
@@ -7,7 +7,6 @@ body {
 .alert-info {
     background-color: #c8eaf5;
     padding: 1em 0;
-    margin: 0.5em;
     justify-content: center;
     display: flex;
 }
@@ -20,19 +19,28 @@ nav{
 }
 
 .nav-links{
-    padding: 0px;
+    padding: 0 0;
     list-style-type: none;
     text-align: center;
     display: flex;
     flex-direction: column;
+    font-family: sans-serif;
 }
 .nav-links li{
     background-color: #cbc6c6;
    margin-bottom: .5em;
-
+    padding: .5em;
 }
 .header-img{
-    display: flex;
-    margin: auto;
+  width: 100%;
 }
-
+img{
+    width: 100%;
+}
+.main{
+    font-family: sans-serif;
+}
+.sub-section{
+    font-style: italic;
+    font-family: sans-serif;
+}
